--- a/appstate.json
+++ b/appstate.json
@@ -1,9 +1,119 @@
-hello: "hello world"
-
-}
-The appstate.json file is used to store the app state.
-The appstate.json file is created automatically when you run the bot for the first time.
-The appstate.json file is located in the same folder as the main file.
-The appstate.json file is automatically updated when you run the bot.
-The appstate.json file is not tracked by Git.
-Note: The appstate.json file is not included in the repository.
+[
+    {
+        "key": "dbln",
+        "value": "%7B%2261564664881669%22%3A%22AdAIa42N%22%2C%2261551474205816%22%3A%22044KTUc6%22%2C%22100095016803089%22%3A%2210ROwAbQ%22%2C%2261562963472651%22%3A%22pkxFcljD%22%2C%2261566458426645%22%3A%22vbtYHGZB%22%2C%2261550061382300%22%3A%22YZTuzLUx%22%2C%2261566554430136%22%3A%22pqeQEhfv%22%2C%2261566838042382%22%3A%22ae31T7dI%22%2C%2261566263863403%22%3A%22vv74ldQG%22%2C%2261566125387559%22%3A%22ByiJJLtY%22%7D",
+        "domain": "facebook.com",
+        "path": "/login/device-based/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "datr",
+        "value": "jNa0ZmSnKF2zleS-vy_jevv6",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "sb",
+        "value": "jNa0ZomBao2_Qqruu3h-3E8v",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "vpd",
+        "value": "v1%3B665x360x1.500488042831421",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "ps_l",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "ps_n",
+        "value": "1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "c_user",
+        "value": "61566125387559",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "fr",
+        "value": "1h1bvFU66chvdYNoi.AWWeX4Q9xl3V_7Zq1T29lCqSz04.Bm7T85..AAA.0.0.Bm-keS.AWVB4a-x0LY",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "xs",
+        "value": "39%3ApE8D1lXuzN6JPA%3A2%3A1727678356%3A-1%3A-1",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "m_page_voice",
+        "value": "61566125387559",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "locale",
+        "value": "en_GB",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "wl_cbv",
+        "value": "v2%3Bclient_version%3A2642%3Btimestamp%3A1728358815",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    },
+    {
+        "key": "fbl_st",
+        "value": "101328707%3BT%3A28805980",
+        "domain": "facebook.com",
+        "path": "/",
+        "hostOnly": false,
+        "creation": "2024-10-08T03:44:05.537Z",
+        "lastAccessed": "2024-10-08T03:44:05.537Z"
+    }
+]
